project(Programming)
cmake_minimum_required(VERSION 3.6)
find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})
find_package(OpenMP REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
find_package(HPX REQUIRED)
add_subdirectory(test)
add_subdirectory(benchmark)
